# template-python-cli-app

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli_app.py  pyproject.toml
src/my_cli_app/: __init__.py  cli.py  py.typed
tests/: test_cli.py
