[tool.poetry]
name = "my-cli-app"
version = "0.1.0"
description = "A Python CLI application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[tool.poetry.scripts]
my-cli = "my_cli_app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100


