[tool.poetry]
name = "my-cli-app"
version = "0.1.0"
description = "A Python CLI application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.12.1"
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[tool.poetry.scripts]
my-cli = "my_cli_app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["my_cli_app"]


